fix(extended-1.2): add alternative name for images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="wrapper">
   <header class="header">
     <div class="header__info info">
-      <img class="info__img" src="assets/img/eisenhower-matrix.jpg">
+      <img class="info__img" src="assets/img/eisenhower-matrix.jpg" alt="Eisenhower-matrix">
       <a class="info__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
   </header>
@@ -38,7 +38,7 @@
               <input class="form__input form__input_transparent" type="text">
               <button type="button" class="btn js-edit">Edit</button>
               <button type="button" class="btn-svg js-delete">
-                <img class="btn-svg__img" src="assets/icon/remove.svg">
+                <img class="btn-svg__img" src="assets/icon/remove.svg" alt="Delete task button">
               </button>
             </li>
             <li class="form__item edit-mode">
@@ -47,7 +47,7 @@
               <input class="form__input form__input_transparent" type="text" value="Go Shopping">
               <button type="button" class="btn js-edit">Save</button>
               <button type="button" class="btn-svg js-delete">
-                <img class="btn-svg__img" src="assets/icon/remove.svg">
+                <img class="btn-svg__img" src="assets/icon/remove.svg" alt="Delete task button">
               </button>
             </li>
           </ul>
@@ -61,7 +61,7 @@
               <input class="form__input form__input_transparent" type="text">
               <button type="button" class="btn js-edit">Edit</button>
               <button type="button" class="btn-svg js-delete">
-                <img class="btn-svg__img" src="assets/icon/remove.svg">
+                <img class="btn-svg__img" src="assets/icon/remove.svg" alt="Delete task button">
               </button>
             </li>
           </ul>
